# test-github-actions

./: README.md  pyproject.toml
.github/workflows/: bumpversion.yml  pythonpublish.yaml
scripts/: init  publish
