[tool.commitizen]
version = "0.8.2"
bump_message = """bump: $current_version → $new_version


skip-checks: true"""
tag_format = "v$version"
files = [
  "pyproject.toml",
  "VERSION"
]

[tool.poetry]
name = "test-github-actions"
version = "0.8.2"
description = "Github actions test"
authors = ["Santiago Fraire Willemoës <santiwilly@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
commitizen = "^1.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
